Support Maven plugin builds on JDK 8